10 or under moves no need to parallel